--- a/Coursework/flask/Templates/results.html
+++ b/Coursework/flask/Templates/results.html
@@ -3,167 +3,170 @@
 <head>
 
 
-  <style>
-    /* Setting the alignment of all h1 elements to the center */
-    h1 {text-align: center; }
-    
-    /* Setting the background color of the body element */
-    body {
-      background-color: #232f3e;
-    }
-    
-    /* Setting the font, border style and width of the table with id 'customers' */
-    #customers {
-      font-family: Arial, Helvetica, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-    }
-    
-    /* Setting the border and padding of the table data and table header elements within 'customers' table */
-    #customers td, #customers th {
-      border: 0.5px solid #ddd;
-      padding: 8px;
-    }
-    
-    /* Setting the background color of even rows in the 'customers' table */
-    #customers tr:nth-child(even){background-color: #232f3e;}
-    
-    /* Setting the hover effect background color for rows in the 'customers' table */
-    #customers tr:hover {background-color: #232f50;}
-    
-    /* Setting the padding, alignment, background color, and text color of table headers in the 'customers' table */
-    #customers th {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      text-align: left;
-      background-color: #FF9900;
-      color: white;
-    }
-    
-    /* Setting the display, color, and text decoration properties of links within table data */
-    td a {
-      display: block;
-      color: #fff;
-      text-decoration: none;
-    }
-    
-    /* Setting the display, and center alignment of the 'like-btn' class */
-    .like-btn {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-    /* Setting the active state scale transformation of the 'like-btn' class */
-    .like-btn:active{
-      transform: scale(0.9, 0.9);
-    }
-    
-    /* Setting the animation of the active state of the 'like-btn' class */
-    .like-btn.active{
-      animation: pop 0.6s 1;
-    }
-    
-    /* Setting the fill color of the path within the 'like-btn' class */
-    .like-btn path {
-      fill: #767676;
-    }
-    
-    /* Setting the fill color of the path within the active state of the 'like-btn' class */
-    .like-btn.active path{
-      fill: #ec3e3e;
-    }
-    
-    /* Setting the position, animation, and opacity of the 'clone' class */
-    .clone{
-      position: absolute;
-      animation: moveOutwards 0.9s 1;
-      opacity: 0;
-    }
-    
-    /* Defining the keyframes for the 'moveOutwards' animation */
-    @keyframes moveOutwards{
-      from {
-        opacity: 1;
-        transform: translate(0, 0);
-      }
-    }
-    
-    </style>
-    
+<style>
+h1 {text-align: center; }
+body {
+  background-color: #232f3e;
+}
+
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+
+}
+
+#customers td, #customers th {
+  border: 0.5px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #232f3e;}
+
+#customers tr:hover {background-color: #232f50;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #FF9900;
+  color: white;
+}
+td a {
+   display: block;
+   color: #fff;
+   text-decoration: none;
+}
+
+.like-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.like-btn:active{
+  transform: scale(0.9, 0.9);
+}
+.like-btn.active{
+  animation: pop 0.6s 1;
+}
+.like-btn path {
+  fill: #767676;
+}
+.like-btn.active path{
+  fill: #ec3e3e;
+}
+
+.clone{
+  position: absolute;
+  animation: moveOutwards 0.9s 1;
+  opacity: 0;
+}
+
+@keyframes moveOutwards{
+  from {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
 
 
-  </head> <!-- Closing tag for the head section of the HTML document. -->
-
-  <body> <!-- Opening tag for the body section of the HTML document. -->
-    <h1 class="title">Amazon <span>Price Tracker</span></h1> <!-- Title of the page with a nested span element for styling. -->
-    <h1 style="color:#FF9900;"><b>RESULTS</b></h1> <!-- Another title for the page, styled with inline CSS to change the color. -->
-  
-  <table id="customers"> <!-- Opening tag for a table with the ID 'customers'. -->
-    <tr> <!-- Opening tag for a table row. -->
-      <th>Price</th> <!-- Table header cell for 'Price'. -->
-      <th>Image</th> <!-- Table header cell for 'Image'. -->
-      <th>Name</th> <!-- Table header cell for 'Name'. -->
-      <th>Favourite</th> <!-- Table header cell for 'Favourite'. -->
-    </tr> <!-- Closing tag for a table row. -->
-  
-    {% for dict_item in o %} <!-- Start of a Jinja2 for loop that iterates over a list 'o'. Each item in the list is a dictionary. -->
-      <!-- <a href="{{dict_item.link.href}}"> --> <!-- Commented out anchor tag that would create a link with the href attribute set to the value of 'href' in the 'link' dictionary. -->
-        <tr> <!-- Opening tag for a table row. -->
-      {% for key, value in dict_item.items() %} <!-- Start of a Jinja2 for loop that iterates over each key-value pair in the current dictionary item. -->
-        {% if key == "link" %} <!-- Jinja2 if statement that checks if the current key is 'link'. -->
-          {% for k, v in value.items() %} <!-- If the key is 'link', start another Jinja2 for loop that iterates over each key-value pair in the 'link' dictionary. -->
-            {% if k == "href" %} <!-- Jinja2 if statement that checks if the current key is 'href'. -->
-              {% set link = v %} <!-- If the key is 'href', set a Jinja2 variable 'link' to the current value. -->
-              {% for key, value in dict_item.items() %} <!-- Start another Jinja2 for loop that iterates over each key-value pair in the current dictionary item. -->
-                {% if key == "name" %} <!-- Jinja2 if statement that checks if the current key is 'name'. -->
-                  <td><a href="{{link}}">{{value}}</a></td> <!-- If the key is 'name', create a table cell with an anchor tag inside. The href attribute of the anchor tag is set to the 'link' variable, and the text of the link is set to the current value. -->
-  
-                
+</style>
 
 
-                  <td style='width:10%'> <!-- This is a table cell with a width of 10% -->
+</head>
+<body>
+  <h1 class="title">Amazon <span>Price Tracker</span></h1>
+  <h1 style="color:#FF9900;"><b>RESULTS</b></h1>
 
-                    <!-- The form action attribute specifies where to send the form-data when a form is submitted.
-                    In this case, it sends a POST request to the 'addfav' route -->
-                    <form action="{{ url_for('addfav') }}" method="POST">
+<table id="customers">
+  <tr>
+    <th>Price</th>
+    <th>Image</th>
+    <th>Name</th>
+    <th>Favourite</th>
+  </tr>
+
+  {% for dict_item in o %}
+    <!-- <a href="{{dict_item.link.href}}"> -->
+      <tr>
+    {% for key, value in dict_item.items() %}
+      {% if key == "link" %}
+        {% for k, v in value.items() %}
+          {% if k == "href" %}
+            {% set link = v %}
+            {% for key, value in dict_item.items() %}
+              {% if key == "name" %}
+                <td><a href="{{link}}">{{value}}</a></td>
                 
-                        <!-- The button element represents a clickable button. When clicked, it will submit the form -->
-                        <button type="submit" class="like-btn">
                 
-                            <!-- The SVG element is a container for SVG graphics. The path element is one of the basic shapes in SVG. 
-                            In this case, it defines the shape of a like icon -->
-                            <svg class="like_icon" width="44" height="39" viewBox="0 0 44 39" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M13 2C6.925 2 2 6.925 2 13C2 24 15 34 22 36.326C29 34 42 24 42 13C42 6.925 37.075 2 31 2C27.28 2 23.99 3.847 22 6.674C20.9857
-                                    5.22921 19.6382 4.05009 18.0715 3.23649C16.5049 2.42289 14.7653 1.99875 13 2Z"/>
-                            </svg>
-                
-                            <!-- The input elements with type="hidden" let web developers include data that cannot be seen or modified by users when a form is submitted -->
-                            <input type="hidden" id="name" name="name" value='{{dict_item.name}}' />
-                            <input type="hidden" id="price" name="price" value='{{dict_item.price}}' />
-                            <input type="hidden" id="image" name="image" value='{{dict_item.image}}' />
-                            <input type="hidden" id="link" name="link" value='{{link}}' />
-                
-                        </button>
-                    </form>
-                </td>
-                
+
+<!--                 <td style='width:10%'>
+                  <form action>
+                  <a onclick = "save_fav('{{link}}','{{dict_item.name}}','{{dict_item.image}}','{{dict_item.price}}')"  class="like-btn"> 
+                    <svg class="like_icon" width="44" height="39" viewBox="0 0 44 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M13 2C6.925 2 2 6.925 2 13C2 24 15 34 22 36.326C29 34 42 24 42 13C42 6.925 37.075 2 31 2C27.28 2 23.99 3.847 22 6.674C20.9857
+                          5.22921 19.6382 4.05009 18.0715 3.23649C16.5049 2.42289 14.7653 1.99875 13 2Z"/>
+                    </svg>
+            
+                  </a>
+                  </form>
+                </td> -->
+
+
+                <td style='width:10%'>
+                  <form action="{{ url_for('addfav') }}" method="POST">
+                      <button type="submit" class="like-btn">
+                          <svg class="like_icon" width="44" height="39" viewBox="0 0 44 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M13 2C6.925 2 2 6.925 2 13C2 24 15 34 22 36.326C29 34 42 24 42 13C42 6.925 37.075 2 31 2C27.28 2 23.99 3.847 22 6.674C20.9857
+                                  5.22921 19.6382 4.05009 18.0715 3.23649C16.5049 2.42289 14.7653 1.99875 13 2Z"/>
+                          </svg>
+                          <input type="hidden" id="name" name="name" value='{{dict_item.name}}' />
+                          <input type="hidden" id="price" name="price" value='{{dict_item.price}}' />
+                          <input type="hidden" id="image" name="image" value='{{dict_item.image}}' />
+                          <input type="hidden" id="link" name="link" value='{{link}}' />
+                      </button>
+                  </form>
+              </td>
               
 
 
-                {% endif %}
-                {% endfor %}
-              {% elif key == "price" %}   <!-- If the key is "price" -->
-                <td style="color:#FF9900;"><b>£{{value}}</b></td>   <!-- Display the value associated with the "price" key in a table data cell, colored and bolded -->
-              {% elif key == "image" %}   <!-- If the key is "image" -->
-                <td><img src="{{value}}" width="100" height="120"> </td>   <!-- Display an image with the source URL being the value associated with the "image" key -->
               {% endif %}
             {% endfor %}
-            </tr>   <!-- End the table row -->
-          {% endfor %}   <!-- End the loop through each item in the "items" list -->
+          {% endif %}
+        {% endfor %}
+      {% elif key == "price" %}
+        <td style="color:#FF9900;"><b>£{{value}}</b></td>
+      {% elif key == "image" %}
+        <td><img src="{{value}}" width="100" height="120"> </td>
+      {% endif %}
+    {% endfor %}
+    
+      </tr>
+    
+  {% endfor %}
 
 </table>
 
+<!-- <script type="text/javascript">
+
+var today = new Date();
+var dd = String(today.getDate()).padStart(2, '0');
+var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+var yyyy = today.getFullYear();
+
+today = mm + '/' + dd + '/' + yyyy;
+
+  function save_fav(link, sname, image, price) {
+    var message = 
+                  "Name: " + sname + "\n" +
+                  "Price: " + price + "\n" +
+                  "Link: " + link + "\n" +
+                  "Image: " + image + "\n" +
+                  "Date: " + today;
+    alert(message);
+    // to make this work properly, the fucntion should save these details to the DB and redirect the user to their homepage
+  }
+</script> -->
 
 
 </body>
